--- a/views/responses.ejs
+++ b/views/responses.ejs
@@ -2,6 +2,21 @@
 <html>
 <head>
   <title>Form Responses</title>
+  <style>
+    body, html {
+      height: 100%;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      text-align: center;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+  </style>
 </head>
 <body>
   <h1>Form Responses</h1>
@@ -18,7 +33,7 @@
     <p>Pagination not implemented %></p>
     <% }); %>
   <% } else { %>
-    <p>🤷‍♂️ No responses found. 🤷‍♂️</p>
+    <h1>🤷‍♂️ No responses found. 🤷‍♂️</h1>
   <% } %>
    
 </body>
